--- a/cmok0004/Assignment_PartA.ipynb
+++ b/cmok0004/Assignment_PartA.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
@@ -84,8 +84,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T14:25:41.284059Z",
-     "start_time": "2023-05-28T14:25:41.276834Z"
+     "end_time": "2023-05-28T15:01:10.856763Z",
+     "start_time": "2023-05-28T15:01:10.831213Z"
     }
    }
   },
@@ -100,17 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "client = MongoClient('mongodb://localhost:27017/')\n",
-    "db = client.fit3182_assignment_db"
+    "db = client.fit3182_assignment_db\n",
+    "db.stations.drop()\n",
+    "db.dates.drop()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T13:34:56.617087Z",
-     "start_time": "2023-05-28T13:34:56.599022Z"
+     "end_time": "2023-05-28T15:01:10.859162Z",
+     "start_time": "2023-05-28T15:01:10.833861Z"
     }
    }
   },
@@ -125,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "climate_historic = pd.read_csv(\"../dataset/climate_historic.csv\")\n",
@@ -134,8 +136,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T14:14:52.884371Z",
-     "start_time": "2023-05-28T14:14:52.858801Z"
+     "end_time": "2023-05-28T15:01:10.878033Z",
+     "start_time": "2023-05-28T15:01:10.854869Z"
     }
    }
   },
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "# this is done as Pymongo use datetime for date and time\n",
@@ -167,14 +169,38 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T14:14:54.744645Z",
-     "start_time": "2023-05-28T14:14:54.716838Z"
+     "end_time": "2023-05-28T15:01:10.888331Z",
+     "start_time": "2023-05-28T15:01:10.877798Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "stations_col = [\n",
+    "    {\n",
+    "        \"_id\": int(station),\n",
+    "        \"dates\": [\n",
+    "            {\"date\": date}\n",
+    "            for date in climate_historic[climate_historic.station == station][\"date\"].array\n",
+    "        ]\n",
+    "    }\n",
+    "    for station in list(climate_historic.station.unique())\n",
+    "]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-28T15:01:10.902226Z",
+     "start_time": "2023-05-28T15:01:10.885574Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "dates_col = [\n",
@@ -199,8 +225,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T14:28:57.840579Z",
-     "start_time": "2023-05-28T14:28:57.595084Z"
+     "end_time": "2023-05-28T15:01:11.117068Z",
+     "start_time": "2023-05-28T15:01:10.900721Z"
     }
    }
   },
@@ -215,18 +241,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duplicated Keys in dates (Data already inserted)\n"
+      "Data inserted\n",
+      "Data inserted\n"
      ]
     }
    ],
    "source": [
     "from pymongo.errors import BulkWriteError\n",
+    "\n",
+    "try:\n",
+    "    db.stations.insert_many(stations_col)\n",
+    "except BulkWriteError:\n",
+    "    print(\"Duplicated Keys in stations (Data already inserted)\")\n",
+    "else:\n",
+    "    print(\"Data inserted\")\n",
     "\n",
     "try:\n",
     "    db.dates.insert_many(dates_col)\n",
@@ -238,8 +272,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T14:29:23.500676Z",
-     "start_time": "2023-05-28T14:29:23.472856Z"
+     "end_time": "2023-05-28T15:01:11.349298Z",
+     "start_time": "2023-05-28T15:01:11.119605Z"
     }
    }
   },
@@ -254,11 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-28T15:01:11.353323Z",
+     "start_time": "2023-05-28T15:01:11.349961Z"
+    }
    }
   }
  ],
