ADDED hotspots collection

--- a/cmok0004/Assignment_PartA.ipynb
+++ b/cmok0004/Assignment_PartA.ipynb
@@ -33,8 +33,7 @@
     "Hotspots Collection:\n",
     "    Hotspots = [\n",
     "        {\n",
-    "            id: datetime,\n",
-    "            date: date (id of date in Dates)\n",
+    "            id: id,\n",
     "            other_attributes: ...\n",
     "        }\n",
     "    ]\n",
@@ -74,18 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "import pandas as pd             # pandas version 2.0.1\n",
-    "import datetime"
+    "import datetime\n",
+    "from bson import ObjectId"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:01:10.856763Z",
-     "start_time": "2023-05-28T15:01:10.831213Z"
+     "end_time": "2023-05-28T15:41:37.089415Z",
+     "start_time": "2023-05-28T15:41:37.069681Z"
     }
    }
   },
@@ -100,19 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "client = MongoClient('mongodb://localhost:27017/')\n",
     "db = client.fit3182_assignment_db\n",
     "db.stations.drop()\n",
-    "db.dates.drop()"
+    "db.dates.drop()\n",
+    "db.hotspots.drop()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:01:10.859162Z",
-     "start_time": "2023-05-28T15:01:10.833861Z"
+     "end_time": "2023-05-28T15:41:37.103379Z",
+     "start_time": "2023-05-28T15:41:37.072114Z"
     }
    }
   },
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "climate_historic = pd.read_csv(\"../dataset/climate_historic.csv\")\n",
@@ -136,8 +137,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:01:10.878033Z",
-     "start_time": "2023-05-28T15:01:10.854869Z"
+     "end_time": "2023-05-28T15:41:37.118759Z",
+     "start_time": "2023-05-28T15:41:37.101389Z"
     }
    }
   },
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "# this is done as Pymongo use datetime for date and time\n",
@@ -169,14 +170,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:01:10.888331Z",
-     "start_time": "2023-05-28T15:01:10.877798Z"
+     "end_time": "2023-05-28T15:41:37.134765Z",
+     "start_time": "2023-05-28T15:41:37.133476Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "stations_col = [\n",
@@ -193,14 +194,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:01:10.902226Z",
-     "start_time": "2023-05-28T15:01:10.885574Z"
+     "end_time": "2023-05-28T15:41:37.147312Z",
+     "start_time": "2023-05-28T15:41:37.141052Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 77,
+   "outputs": [],
+   "source": [
+    "hotspots_col = [\n",
+    "    {\n",
+    "        \"_id\": ObjectId(),\n",
+    "        \"date\": hotspot.date,\n",
+    "        \"datetime\": hotspot.datetime,\n",
+    "        \"lat\": hotspot.latitude,\n",
+    "        \"lng\": hotspot.longitude,\n",
+    "        \"confidence\": hotspot.confidence,\n",
+    "        \"surface_temperature\": hotspot.surface_temperature_celcius\n",
+    "    }\n",
+    "    for _, hotspot in hotspot_historic.iterrows()\n",
+    "]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-28T15:41:37.275866Z",
+     "start_time": "2023-05-28T15:41:37.144282Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "dates_col = [\n",
@@ -215,8 +242,8 @@
     "            \"ghi\": int(climate_historic[climate_historic.date == date][\"GHI_w/m2\"].array[0])\n",
     "        },\n",
     "        \"hotspots\": [\n",
-    "            {\"hotspot_id\": hotspot_id}\n",
-    "            for hotspot_id in hotspot_historic[hotspot_historic.date == date][\"datetime\"].array\n",
+    "            {\"hotspot_id\": hotspot}\n",
+    "            for hotspot in pd.DataFrame(hotspots_col)[pd.DataFrame(hotspots_col).date == date][\"_id\"]\n",
     "        ]\n",
     "    }\n",
     "    for date in dates\n",
@@ -225,8 +252,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:01:11.117068Z",
-     "start_time": "2023-05-28T15:01:10.900721Z"
+     "end_time": "2023-05-28T15:41:39.233174Z",
+     "start_time": "2023-05-28T15:41:37.286447Z"
     }
    }
   },
@@ -241,12 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Data inserted\n",
       "Data inserted\n",
       "Data inserted\n"
      ]
@@ -267,13 +295,20 @@
     "except BulkWriteError:\n",
     "    print(\"Duplicated Keys in dates (Data already inserted)\")\n",
     "else:\n",
+    "    print(\"Data inserted\")\n",
+    "\n",
+    "try:\n",
+    "    db.hotspots.insert_many(hotspots_col)\n",
+    "except BulkWriteError:\n",
+    "    print(\"Duplicated Keys in hotspots (Data already inserted)\")\n",
+    "else:\n",
     "    print(\"Data inserted\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:01:11.349298Z",
-     "start_time": "2023-05-28T15:01:11.119605Z"
+     "end_time": "2023-05-28T15:41:39.599278Z",
+     "start_time": "2023-05-28T15:41:39.234406Z"
     }
    }
   },
@@ -288,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:01:11.353323Z",
-     "start_time": "2023-05-28T15:01:11.349961Z"
+     "end_time": "2023-05-28T15:41:39.599461Z",
+     "start_time": "2023-05-28T15:41:39.592162Z"
     }
    }
   }
