--- a/cmok0004/Assignment_PartA.ipynb
+++ b/cmok0004/Assignment_PartA.ipynb
@@ -73,19 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "import pandas as pd             # pandas version 2.0.1\n",
-    "import datetime\n",
+    "from datetime import datetime\n",
     "from bson import ObjectId"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:37.089415Z",
-     "start_time": "2023-05-28T15:41:37.069681Z"
+     "end_time": "2023-05-29T06:47:01.055525Z",
+     "start_time": "2023-05-29T06:47:00.383757Z"
     }
    }
   },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "client = MongoClient('mongodb://localhost:27017/')\n",
@@ -112,8 +112,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:37.103379Z",
-     "start_time": "2023-05-28T15:41:37.072114Z"
+     "end_time": "2023-05-29T07:05:27.371991Z",
+     "start_time": "2023-05-29T07:05:27.328757Z"
     }
    }
   },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "climate_historic = pd.read_csv(\"../dataset/climate_historic.csv\")\n",
@@ -137,15 +137,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:37.118759Z",
-     "start_time": "2023-05-28T15:41:37.101389Z"
+     "end_time": "2023-05-29T07:05:29.052113Z",
+     "start_time": "2023-05-29T07:05:29.031824Z"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "### Creating Dates collection"
+    "### Functions for converting date in string to datetime"
    ],
    "metadata": {
     "collapsed": false
@@ -153,33 +153,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "outputs": [],
    "source": [
-    "# this is done as Pymongo use datetime for date and time\n",
     "def raw_date_to_datetime(date: str) -> datetime:\n",
-    "    [dd, mm, yyyy] = date.split(\"/\")\n",
-    "    return datetime.datetime(int(yyyy), int(mm), int(dd))\n",
+    "    dd, mm, yyyy = date.split(\"/\")\n",
+    "    return datetime(int(yyyy), int(mm), int(dd))\n",
     "\n",
-    "dates = pd.DataFrame(climate_historic.date).merge(hotspot_historic.date).date   # merging both datasets' date\n",
-    "dates = pd.DataFrame(dates.unique())                                            # Get all unique dates from both data set\n",
-    "dates = list(dates[0].apply(raw_date_to_datetime))                              # date:str -> date:datetime; Series -> List\n",
-    "climate_historic.date = climate_historic.date.apply(raw_date_to_datetime)       # date:str -> date:datetime\n",
-    "hotspot_historic.date = hotspot_historic.date.apply(raw_date_to_datetime)       # date:str -> date:datetime"
+    "def raw_datetime_to_datatime(datetime_str: str) -> datetime:\n",
+    "    date, time = datetime_str.split(\"T\")\n",
+    "    yy, mm, dd = date.split(\"-\")\n",
+    "    h, m, s = time.split(\":\")\n",
+    "    return datetime(int(yy), int(mm), int(dd), hour=int(h), minute=int(m), second=int(s))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:37.134765Z",
-     "start_time": "2023-05-28T15:41:37.133476Z"
+     "end_time": "2023-05-29T06:59:52.911854Z",
+     "start_time": "2023-05-29T06:59:52.897188Z"
     }
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Light data wrangling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 49,
    "outputs": [],
    "source": [
+    "dates = pd.DataFrame(climate_historic.date).merge(hotspot_historic.date).date           # merging both datasets' date\n",
+    "dates = pd.DataFrame(dates.unique())                                                    # Get all unique dates from both data set\n",
+    "dates = list(dates[0].apply(raw_date_to_datetime))                                      # date:str -> date:datetime; Series -> List\n",
+    "\n",
+    "climate_historic.date = climate_historic.date.apply(raw_date_to_datetime)               # date:str -> date:datetime\n",
+    "hotspot_historic.date = hotspot_historic.date.apply(raw_date_to_datetime)               # date:str -> date:datetime\n",
+    "hotspot_historic.datetime = hotspot_historic.datetime.apply(raw_datetime_to_datatime)   # datetime:str -> datetime:datetime"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-29T07:05:31.626169Z",
+     "start_time": "2023-05-29T07:05:31.594730Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Creating Data Models"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "outputs": [],
+   "source": [
+    "# list representing the Station collection\n",
     "stations_col = [\n",
     "    {\n",
     "        \"_id\": int(station),\n",
@@ -194,21 +233,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:37.147312Z",
-     "start_time": "2023-05-28T15:41:37.141052Z"
+     "end_time": "2023-05-29T07:05:34.343775Z",
+     "start_time": "2023-05-29T07:05:34.323455Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 51,
    "outputs": [],
    "source": [
+    "# list representing the Hotspot collection\n",
     "hotspots_col = [\n",
     "    {\n",
-    "        \"_id\": ObjectId(),\n",
-    "        \"date\": hotspot.date,\n",
-    "        \"datetime\": hotspot.datetime,\n",
+    "        \"_id\": ObjectId(),              # this is done as there are duplicated value for \"date\" and \"datetime\" across rows of data\n",
+    "        \"date\": hotspot.date,           #\n",
+    "        \"datetime\": hotspot.datetime,   #\n",
     "        \"lat\": hotspot.latitude,\n",
     "        \"lng\": hotspot.longitude,\n",
     "        \"confidence\": hotspot.confidence,\n",
@@ -220,20 +260,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:37.275866Z",
-     "start_time": "2023-05-28T15:41:37.144282Z"
+     "end_time": "2023-05-29T07:05:36.274718Z",
+     "start_time": "2023-05-29T07:05:36.120147Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "outputs": [],
    "source": [
+    "# list representing the Dates collection\n",
     "dates_col = [\n",
     "    {\n",
     "        \"_id\": date,\n",
-    "        \"climate\": {\n",
+    "        \"climate\": {    # date-climate is 1-1\n",
     "            \"air_temperature\": int(climate_historic[climate_historic.date == date][\"air_temperature_celcius\"].array[0]),\n",
     "            \"relative_humidity\": float(climate_historic[climate_historic.date == date][\"relative_humidity\"].array[0]),\n",
     "            \"windspeed_knots\": float(climate_historic[climate_historic.date == date][\"windspeed_knots\"].array[0]),\n",
@@ -241,7 +282,7 @@
     "            \"precipitation\": climate_historic[climate_historic.date == date][\"precipitation\"].array[0],\n",
     "            \"ghi\": int(climate_historic[climate_historic.date == date][\"GHI_w/m2\"].array[0])\n",
     "        },\n",
-    "        \"hotspots\": [\n",
+    "        \"hotspots\": [   # date-hotspots is 1-0/many\n",
     "            {\"hotspot_id\": hotspot}\n",
     "            for hotspot in pd.DataFrame(hotspots_col)[pd.DataFrame(hotspots_col).date == date][\"_id\"]\n",
     "        ]\n",
@@ -252,15 +293,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:39.233174Z",
-     "start_time": "2023-05-28T15:41:37.286447Z"
+     "end_time": "2023-05-29T07:05:41.604857Z",
+     "start_time": "2023-05-29T07:05:39.047037Z"
     }
    }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "### Inserting Lists to MongoDb"
+    "### Inserting Data to MongoDb"
    ],
    "metadata": {
     "collapsed": false
@@ -268,15 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data inserted\n",
-      "Data inserted\n",
-      "Data inserted\n"
+      "Station inserted\n",
+      "Date inserted\n",
+      "Hotspot inserted\n"
      ]
     }
    ],
@@ -288,27 +329,27 @@
     "except BulkWriteError:\n",
     "    print(\"Duplicated Keys in stations (Data already inserted)\")\n",
     "else:\n",
-    "    print(\"Data inserted\")\n",
+    "    print(\"Station inserted\")\n",
     "\n",
     "try:\n",
     "    db.dates.insert_many(dates_col)\n",
     "except BulkWriteError:\n",
     "    print(\"Duplicated Keys in dates (Data already inserted)\")\n",
     "else:\n",
-    "    print(\"Data inserted\")\n",
+    "    print(\"Date inserted\")\n",
     "\n",
     "try:\n",
     "    db.hotspots.insert_many(hotspots_col)\n",
     "except BulkWriteError:\n",
     "    print(\"Duplicated Keys in hotspots (Data already inserted)\")\n",
     "else:\n",
-    "    print(\"Data inserted\")\n"
+    "    print(\"Hotspot inserted\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:39.599278Z",
-     "start_time": "2023-05-28T15:41:39.234406Z"
+     "end_time": "2023-05-29T07:05:44.536600Z",
+     "start_time": "2023-05-29T07:05:44.159695Z"
     }
    }
   },
@@ -323,15 +364,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-28T15:41:39.599461Z",
-     "start_time": "2023-05-28T15:41:39.592162Z"
-    }
+    "collapsed": false
    }
   }
  ],
