ADDED Spark Streaming barebone

--- a/cmok0004/Assignment_PartB_Streaming_Application.ipynb
+++ b/cmok0004/Assignment_PartB_Streaming_Application.ipynb
@@ -2,12 +2,454 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T16:02:31.038897Z",
+     "start_time": "2023-06-01T16:02:31.031432Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "os.environ['PYSPARK_SUBMIT_ARGS'] = '--packages org.apache.spark:spark-streaming-kafka-0-10_2.12:3.3.0,org.apache.spark:spark-sql-kafka-0-10_2.12:3.3.0 pyspark-shell'\n",
+    "\n",
+    "from pymongo import MongoClient\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col, split, element_at, when"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "TOPIC_NAME = \"topic_1\"\n",
+    "HOST_IP = \"192.168.20.6\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T15:59:21.088595Z",
+     "start_time": "2023-06-01T15:59:21.078102Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":: loading settings :: url = jar:file:/Users/petermok/opt/miniconda3/envs/fit3182/lib/python3.8/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /Users/petermok/.ivy2/cache\n",
+      "The jars for the packages stored in: /Users/petermok/.ivy2/jars\n",
+      "org.apache.spark#spark-streaming-kafka-0-10_2.12 added as a dependency\n",
+      "org.apache.spark#spark-sql-kafka-0-10_2.12 added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-89008c3a-c48d-44c3-b4c2-f0c5052761d3;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound org.apache.spark#spark-streaming-kafka-0-10_2.12;3.3.0 in central\n",
+      "\tfound org.apache.spark#spark-token-provider-kafka-0-10_2.12;3.3.0 in central\n",
+      "\tfound org.apache.kafka#kafka-clients;2.8.1 in central\n",
+      "\tfound org.lz4#lz4-java;1.8.0 in central\n",
+      "\tfound org.xerial.snappy#snappy-java;1.1.8.4 in central\n",
+      "\tfound org.slf4j#slf4j-api;1.7.32 in central\n",
+      "\tfound org.apache.hadoop#hadoop-client-runtime;3.3.2 in central\n",
+      "\tfound org.spark-project.spark#unused;1.0.0 in central\n",
+      "\tfound org.apache.hadoop#hadoop-client-api;3.3.2 in central\n",
+      "\tfound commons-logging#commons-logging;1.1.3 in central\n",
+      "\tfound com.google.code.findbugs#jsr305;3.0.0 in central\n",
+      "\tfound org.apache.spark#spark-sql-kafka-0-10_2.12;3.3.0 in central\n",
+      "\tfound org.apache.commons#commons-pool2;2.11.1 in central\n",
+      ":: resolution report :: resolve 1475ms :: artifacts dl 86ms\n",
+      "\t:: modules in use:\n",
+      "\tcom.google.code.findbugs#jsr305;3.0.0 from central in [default]\n",
+      "\tcommons-logging#commons-logging;1.1.3 from central in [default]\n",
+      "\torg.apache.commons#commons-pool2;2.11.1 from central in [default]\n",
+      "\torg.apache.hadoop#hadoop-client-api;3.3.2 from central in [default]\n",
+      "\torg.apache.hadoop#hadoop-client-runtime;3.3.2 from central in [default]\n",
+      "\torg.apache.kafka#kafka-clients;2.8.1 from central in [default]\n",
+      "\torg.apache.spark#spark-sql-kafka-0-10_2.12;3.3.0 from central in [default]\n",
+      "\torg.apache.spark#spark-streaming-kafka-0-10_2.12;3.3.0 from central in [default]\n",
+      "\torg.apache.spark#spark-token-provider-kafka-0-10_2.12;3.3.0 from central in [default]\n",
+      "\torg.lz4#lz4-java;1.8.0 from central in [default]\n",
+      "\torg.slf4j#slf4j-api;1.7.32 from central in [default]\n",
+      "\torg.spark-project.spark#unused;1.0.0 from central in [default]\n",
+      "\torg.xerial.snappy#snappy-java;1.1.8.4 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   13  |   0   |   0   |   0   ||   13  |   0   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-89008c3a-c48d-44c3-b4c2-f0c5052761d3\n",
+      "\tconfs: [default]\n",
+      "\t0 artifacts copied, 13 already retrieved (0kB/99ms)\n",
+      "23/06/02 01:59:27 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/06/02 01:59:29 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "23/06/02 01:59:29 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "    .master('local[*]')\n",
+    "    .appName('[Demo] Spark Streaming from Kafka into MongoDB')\n",
+    "    .getOrCreate()\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T15:59:31.314122Z",
+     "start_time": "2023-06-01T15:59:22.489688Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- key: binary (nullable = true)\n",
+      " |-- value: binary (nullable = true)\n",
+      " |-- topic: string (nullable = true)\n",
+      " |-- partition: integer (nullable = true)\n",
+      " |-- offset: long (nullable = true)\n",
+      " |-- timestamp: timestamp (nullable = true)\n",
+      " |-- timestampType: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1_topic_name = \"producer_1\"\n",
+    "p1_stream_df = (\n",
+    "    spark.readStream.format('kafka')\n",
+    "    .option('kafka.bootstrap.servers', f'{HOST_IP}:9092')\n",
+    "    .option('subscribe', p1_topic_name)\n",
+    "    .load()\n",
+    ")\n",
+    "p1_stream_df.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T16:10:00.751562Z",
+     "start_time": "2023-06-01T16:10:00.388858Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- data: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1_output_stream_df = (\n",
+    "    p1_stream_df\n",
+    "    .select(                                      # 1\n",
+    "        split(\n",
+    "            p1_stream_df.value.cast('string'),\n",
+    "            ':'\n",
+    "        )\n",
+    "        .alias('data')\n",
+    "    )\n",
+    "    .withColumn('data', element_at('data', 2))    # 2\n",
+    "    .withColumn(\n",
+    "        'data',\n",
+    "        (\n",
+    "            when( col('data') == '', '*' )        # 3A\n",
+    "            .otherwise( col('data') )             # 3B\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "p1_output_stream_df.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T16:12:27.746155Z",
+     "start_time": "2023-06-01T16:12:27.608373Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "class DbWriter:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.db = None\n",
+    "        self.mongo_client = None\n",
+    "\n",
+    "    # called at the start of processing each partition in each output micro-batch\n",
+    "    def open(self, partition_id, epoch_id):\n",
+    "        self.mongo_client = MongoClient(\n",
+    "            host=f'{\"localhost\"}',\n",
+    "            port=27017\n",
+    "        )\n",
+    "        self.db = self.mongo_client.fit3182_assignment_db\n",
+    "        return True\n",
+    "\n",
+    "    # called once per row of the result dataframe\n",
+    "    def process(self, row):\n",
+    "        self.db[TOPIC_NAME].insert_one(row.asDict())\n",
+    "\n",
+    "    # called once all rows have been processed (possibly with error)\n",
+    "    def close(self, err):\n",
+    "        self.mongo_client.close()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T16:10:04.443350Z",
+     "start_time": "2023-06-01T16:10:04.426034Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "db_writer = (\n",
+    "    p1_output_stream_df\n",
+    "    .writeStream\n",
+    "    .outputMode('append')\n",
+    "    .foreach(DbWriter())\n",
+    ")\n",
+    "\n",
+    "console_logger = (\n",
+    "    p1_output_stream_df\n",
+    "    .writeStream\n",
+    "    .outputMode('append')\n",
+    "    .format('console')\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T16:13:42.474249Z",
+     "start_time": "2023-06-01T16:13:42.389810Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "writer = console_logger"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T16:14:50.365069Z",
+     "start_time": "2023-06-01T16:14:50.307489Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/06/02 02:18:08 WARN ResolveWriteToStream: Temporary checkpoint location created which is deleted normally when the query didn't fail: /private/var/folders/nk/pq_9ypcs6_x5jdx99mrtszc80000gn/T/temporary-5d31f9ba-8d54-407a-b1e7-409464891844. If it's required to delete it under any circumstances, please set spark.sql.streaming.forceDeleteTempCheckpointLocation to true. Important to know deleting temp checkpoint folder is best effort.\n",
+      "23/06/02 02:18:08 WARN ResolveWriteToStream: spark.sql.adaptive.enabled is not supported in streaming DataFrames/Datasets and will be disabled.\n",
+      "23/06/02 02:18:08 WARN AdminClientConfig: The configuration 'key.deserializer' was supplied but isn't a known config.\n",
+      "23/06/02 02:18:08 WARN AdminClientConfig: The configuration 'value.deserializer' was supplied but isn't a known config.\n",
+      "23/06/02 02:18:08 WARN AdminClientConfig: The configuration 'enable.auto.commit' was supplied but isn't a known config.\n",
+      "23/06/02 02:18:08 WARN AdminClientConfig: The configuration 'max.poll.records' was supplied but isn't a known config.\n",
+      "23/06/02 02:18:08 WARN AdminClientConfig: The configuration 'auto.offset.reset' was supplied but isn't a known config.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------------\n",
+      "Batch: 0\n",
+      "-------------------------------------------\n",
+      "+----+\n",
+      "|data|\n",
+      "+----+\n",
+      "+----+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------------\n",
+      "Batch: 1\n",
+      "-------------------------------------------\n",
+      "+-----------+\n",
+      "|       data|\n",
+      "+-----------+\n",
+      "| 159, dtype|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------------\n",
+      "Batch: 2\n",
+      "-------------------------------------------\n",
+      "+-----------+\n",
+      "|       data|\n",
+      "+-----------+\n",
+      "| 283, dtype|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------------\n",
+      "Batch: 3\n",
+      "-------------------------------------------\n",
+      "+----------+\n",
+      "|      data|\n",
+      "+----------+\n",
+      "| 55, dtype|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------------\n",
+      "Batch: 4\n",
+      "-------------------------------------------\n",
+      "+-----------+\n",
+      "|       data|\n",
+      "+-----------+\n",
+      "| 197, dtype|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:KeyboardInterrupt while sending command.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/petermok/opt/miniconda3/envs/fit3182/lib/python3.8/site-packages/py4j/java_gateway.py\", line 1038, in send_command\n",
+      "    response = connection.send_command(command)\n",
+      "  File \"/Users/petermok/opt/miniconda3/envs/fit3182/lib/python3.8/site-packages/py4j/clientserver.py\", line 511, in send_command\n",
+      "    answer = smart_decode(self.stream.readline()[:-1])\n",
+      "  File \"/Users/petermok/opt/miniconda3/envs/fit3182/lib/python3.8/socket.py\", line 669, in readinto\n",
+      "    return self._sock.recv_into(b)\n",
+      "KeyboardInterrupt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interrupted by CTRL-C. Stopped query\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import sleep\n",
+    "from pyspark.errors import StreamingQueryException\n",
+    "\n",
+    "try:\n",
+    "    query = writer.start()\n",
+    "    query.awaitTermination()\n",
+    "    sleep(10)\n",
+    "except KeyboardInterrupt:\n",
+    "    print('Interrupted by CTRL-C. Stopped query')\n",
+    "except StreamingQueryException as exc:\n",
+    "    print(exc)\n",
+    "finally:\n",
+    "    query.stop()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-01T16:18:28.282144Z",
+     "start_time": "2023-06-01T16:18:08.136862Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
