--- a/cmok0004/Assignment_PartB_Producer1.ipynb
+++ b/cmok0004/Assignment_PartB_Producer1.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-05-30T14:43:51.269389Z",
-     "start_time": "2023-05-30T14:43:51.263946Z"
+     "end_time": "2023-06-01T16:17:46.435943Z",
+     "start_time": "2023-06-01T16:17:46.376964Z"
     }
    },
    "outputs": [],
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "datetime.datetime(2022, 12, 28, 0, 0)"
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,59 +62,55 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-31T06:19:02.316614Z",
-     "start_time": "2023-05-31T06:19:02.183527Z"
+     "end_time": "2023-06-01T16:17:50.253386Z",
+     "start_time": "2023-06-01T16:17:48.953182Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message published successfully. Data: latitude                  -37.363\n",
-      "longitude                  148.06\n",
-      "air_temperature_celcius        11\n",
-      "relative_humidity            35.3\n",
-      "windspeed_knots              18.2\n",
-      "max_wind_speed               25.1\n",
-      "precipitation               0.00I\n",
-      "GHI_w/m2                      106\n",
-      "Name: 202, dtype: object\n",
-      "2022-12-28 00:00:00 None published\n",
-      "Message published successfully. Data: latitude                   -35.323\n",
-      "longitude                  143.509\n",
-      "air_temperature_celcius         15\n",
-      "relative_humidity             49.3\n",
-      "windspeed_knots                3.6\n",
-      "max_wind_speed                 7.0\n",
+      "Message published successfully. Data: latitude                   -37.386\n",
+      "longitude                  148.043\n",
+      "air_temperature_celcius          8\n",
+      "relative_humidity             43.3\n",
+      "windspeed_knots                3.9\n",
+      "max_wind_speed                 8.0\n",
       "precipitation                0.00I\n",
-      "GHI_w/m2                       129\n",
-      "Name: 105, dtype: object\n",
-      "2022-12-29 00:00:00 None published\n",
-      "Message published successfully. Data: latitude                   -37.623\n",
-      "longitude                  149.284\n",
-      "air_temperature_celcius         21\n",
-      "relative_humidity             64.5\n",
-      "windspeed_knots               10.6\n",
-      "max_wind_speed                15.9\n",
-      "precipitation                1.26G\n",
-      "GHI_w/m2                       158\n",
-      "Name: 35, dtype: object\n",
-      "2022-12-30 00:00:00 None published\n",
-      "Message published successfully. Data: latitude                   -37.332\n",
-      "longitude                  143.375\n",
-      "air_temperature_celcius         21\n",
-      "relative_humidity             51.7\n",
-      "windspeed_knots                7.2\n",
-      "max_wind_speed                13.0\n",
+      "GHI_w/m2                        72\n",
+      "Name: 153, dtype: object\n",
+      "Message published successfully. Data: latitude                   -37.8387\n",
+      "longitude                  144.6301\n",
+      "air_temperature_celcius          11\n",
+      "relative_humidity              41.4\n",
+      "windspeed_knots                 7.7\n",
+      "max_wind_speed                 15.0\n",
+      "precipitation                 0.03G\n",
+      "GHI_w/m2                        101\n",
+      "Name: 307, dtype: object\n",
+      "Message published successfully. Data: latitude                   -36.8264\n",
+      "longitude                  142.6138\n",
+      "air_temperature_celcius          15\n",
+      "relative_humidity              48.2\n",
+      "windspeed_knots                14.7\n",
+      "max_wind_speed                 25.1\n",
+      "precipitation                 0.43G\n",
+      "GHI_w/m2                        131\n",
+      "Name: 283, dtype: object\n",
+      "Message published successfully. Data: latitude                    -37.33\n",
+      "longitude                  148.087\n",
+      "air_temperature_celcius         12\n",
+      "relative_humidity             41.8\n",
+      "windspeed_knots               14.7\n",
+      "max_wind_speed                21.0\n",
       "precipitation                0.00I\n",
-      "GHI_w/m2                       177\n",
-      "Name: 66, dtype: object\n",
-      "2022-12-31 00:00:00 None published\n"
+      "GHI_w/m2                       110\n",
+      "Name: 197, dtype: object\n"
      ]
     },
     {
@@ -124,7 +120,7 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [40]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;28mstr\u001B[39m(today)\u001B[38;5;241m+\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m \u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m+\u001B[39m\u001B[38;5;28mstr\u001B[39m(row\u001B[38;5;241m.\u001B[39mget(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdate\u001B[39m\u001B[38;5;124m\"\u001B[39m)) \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m published\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m      9\u001B[0m today \u001B[38;5;241m=\u001B[39m today \u001B[38;5;241m+\u001B[39m timedelta(days\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m---> 10\u001B[0m \u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Input \u001B[0;32mIn [4]\u001B[0m, in \u001B[0;36m<cell line: 11>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     13\u001B[0m publish_message(producer, topic, key\u001B[38;5;241m=\u001B[39m(\u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(producer))\u001B[38;5;241m+\u001B[39m\u001B[38;5;28mstr\u001B[39m(today)), value\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mstr\u001B[39m(row))\n\u001B[1;32m     14\u001B[0m today \u001B[38;5;241m=\u001B[39m today \u001B[38;5;241m+\u001B[39m timedelta(days\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m---> 15\u001B[0m \u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m10\u001B[39;49m\u001B[43m)\u001B[49m\n",
       "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
@@ -135,7 +131,7 @@
     "\n",
     "HOST_IP = \"192.168.20.6\"\n",
     "\n",
-    "topic = \"Topic1\"\n",
+    "topic = \"producer_1\"\n",
     "climate_streaming = pd.read_csv(\"../dataset/climate_streaming.csv\")\n",
     "producer = connect_kafka_producer()\n",
     "\n",
@@ -149,9 +145,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-31T06:20:11.272928Z",
-     "start_time": "2023-05-31T06:19:33.320975Z"
+     "end_time": "2023-06-01T16:18:29.554269Z",
+     "start_time": "2023-06-01T16:17:52.099089Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
